# BuildandTest

./: README.md  logic_gates.py  pyproject.toml
tests/: test_lg.py
