[tool.poetry]
name = "buildandtest"
version = "0.1.0"
description = ""
authors = ["Osamaegy <117246080+Osamaegy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
